# esp_ptp_rpc

./: CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml  ptp_custom_rpc.c
.github/workflows/: main.yml
include/: ptp_custom_rpc.h  ptp_rpc_proto.h
src/: ptp_custom_rpc.c
